--- a/liiga-react/public/index.html
+++ b/liiga-react/public/index.html
@@ -6,9 +6,13 @@
     <meta name="theme-color" content="#000000" />
 
     <title>LPPCounter</title>
+    <header>
+      <h1>LPP-laskuri</h1>
+    </header>
+
   </head>
   <body>
     <div id="root"></div>
-
+    <div class="content" id="content"></div>
   </body>
 </html>
